syntax = "proto3";

package dmx_controller;

message BeatMetadata {
  double length_ms = 1;
  uint32 offset_ms = 2;
}
