syntax = "proto3";

package dmx_controller;

import "proto/color.proto";
import "proto/light_track.proto";

message Show {
  message AudioTrack {
    uint32 audio_file_id = 1;
  }

  string name = 1;
  ColorPalette color_palette = 2;
  reserved 3 to 10;

  AudioTrack audio_track = 11;
  reserved 12; // default_channel_values
  repeated LightTrack light_tracks = 13;
}
